--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="main-header">
                     <h1 class="main-header__heading">Spis Powszechny Online</h1>
                     <h3 class="main-header__dates">
-                        1.04 - 30.06
+                        1.04 &ndash; 30.06
                     </h3>
                 </div>
             </header>
@@ -145,7 +145,7 @@
                     <h5 class="info-box__title">Raz na 10 lat</h5>
                     <p>
                         Pomóż pokazać, jaka jest dzisiaj Polska. Dane ze spisu <strong>na następne 10 lat</strong>
-                        utrwalą obraz tego, jak wygląda nasz kraj i wpłyną na kształt relacji państwo - Kościół.
+                        utrwalą obraz tego, jak wygląda nasz kraj i wpłyną na kształt relacji państwo &ndash; Kościół.
                     </p>
                     <p>
                         Bez Ciebie obraz będzie niepełny.
@@ -165,7 +165,7 @@
                 <article class="info-box__container">
                     <img src="assets/icon/receipt-icon.svg" class="info-box__icon" alt="Jak?"/>
                     <h5 class="info-box__title">Nie idź na skróty</h5>
-                    <p>W niektórych pytaniach, <strong>najpopularniejsze odpowiedzi są na wierzchu</strong>.</p>
+                    <p>W niektórych pytaniach <strong>najpopularniejsze odpowiedzi są na wierzchu</strong>.</p>
                     <p>Co jeśli Twoja do nich nie należy?</p>
                     <p>Pokażemy, <strong>jak znaleźć właściwą</strong>.</p>
                 </article>
@@ -177,7 +177,7 @@
                     <p>
                         Czy w Polsce żyją prawie sami katolicy i katoliczki?
                         Ile osób określa się tak nie wiedząc, że w formularzu są inne możliwości?
-                        Czy chcesz deklarować się jako katolik/ katoliczka tylko z powodu decyzji Twoich rodziców?
+                        Czy chcesz deklarować się jako katolik / katoliczka tylko z powodu decyzji Twoich rodziców?
                     </p>
                     <p><strong>Czas to sprawdzić.</strong></p>
                 </article>
@@ -224,7 +224,7 @@
                     Jedno mieszkanie = jeden formularz
                 </p>
                 <p class="how-to-prepare__text">
-                    <strong>Na jedno mieszkanie/ dom jednorodzinny przypada jeden formularz spisowy.</strong>
+                    <strong>Na jedno mieszkanie / dom jednorodzinny przypada jeden formularz spisowy.</strong>
                     Pierwsza część to spis zamieszkujących, druga dotyczy warunków mieszkaniowych.
                     W ostatniej są formularze dla poszczególnych osób. Tam znajduje się m.in. pytanie o wyznanie.
                 </p>
@@ -273,7 +273,7 @@
                     <strong>zaraz po tych o narodowość i język</strong>.
                     To właśnie tutaj łatwo się pogubić i udzielić odpowiedzi niezgodnej z własnymi poglądami.
 
-                    <strong>Wiele osób wpisuje też swoje wyznanie nie zastanawiając się nad tym głębiej</strong>,
+                    <strong>Wiele osób wpisuje też swoje wyznanie, nie zastanawiając się nad tym głębiej</strong>,
                     z rozpędu, „bo zawsze tak było”. Warto nie ulegać takiemu mechanicznemu nawykowi
                     i przemyśleć odpowiedź.
 
@@ -298,15 +298,15 @@
                 </p>
                 <ol class="how-to-religion__options">
                     <li class="how-to-religion__option">
-                        Wybierz odpowiedź „inne wyznanie (podać jakie)”.
+                        wybierz odpowiedź „inne wyznanie (podać jakie)”.
                     </li>
                     <li class="how-to-religion__option">
-                        Rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe Kościoły i ponownie odpowiedź
+                        rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe Kościoły i ponownie odpowiedź
                         „inny (podać jaki)”.
                     </li>
                     <li class="how-to-religion__option">
                         <strong>
-                            Dopiero po wybraniu tej opcji po raz drugi będziesz w stanie wpisać wyznanie,
+                            dopiero po wybraniu tej opcji po raz drugi będziesz w stanie wpisać wyznanie,
                             którego nie ma na liście.
                         </strong>
                     </li>
@@ -324,14 +324,14 @@
                     <li class="census-hints__item">
                         Jeśli nie masz wątpliwości, że należysz do konkretnego wyznania, wybierz je z listy.
                         <strong>
-                            Warto zaznaczyć - chrzest (np. w Kościele katolickim) nie oznacza, że musisz podawać
+                            Warto zaznaczyć &ndash; chrzest (np. w Kościele katolickim) nie oznacza, że musisz podawać
                             się za jego członka/członkinię.
                         </strong>
                         Odpowiadaj tak, jak się czujesz.
                         Pytanie o wyznanie to pytanie o <strong>poczucie przynależności</strong>.
                     </li>
                     <li class="census-hints__item">
-                        Jeśli jesteś osobą bezwyznaniową agnostykiem/ agnostyczką lub ateistą/ ateistką,
+                        Jeśli jesteś osobą bezwyznaniową agnostykiem / agnostyczką lub ateistą/ ateistką,
                         <strong>wybierz opcję „nie należę do żadnego wyznania”</strong>.
 <!--                        <ol class="non-believers-hints">-->
 <!--                            <li class="non-believers-hint">-->
@@ -369,16 +369,16 @@
                         <h4>Jestem ochrzczony/a, ale od lat nie chodzę do kościoła, czy muszę zaznaczać Kościół rzymskokatolicki?</h4>
                     </summary>
                     <p>
-                        Jeśli nie czujesz się związana/y z instytucją, do której „formalnie” należysz, możesz
+                        Jeśli nie czujesz się związana(-ny) z instytucją, do której „formalnie” należysz, możesz
                         określić się inaczej. Na przykład:
                     </p>
                 <ul>
-                    <li>chrześcijaństwo - jeśli wierzysz w Jezusa Chrystusa, ale nie chcesz być liczony/a jako katolik/ katoliczka</li>
-                    <li>teizm - jeśli wierzysz w osobowego Boga, który ma wpływ na Twoje życie</li>
-                    <li>deizm - jeśli wierzysz w bezosobowego boga, który nie wpływa na nasze życie</li>
+                    <li>chrześcijaństwo &ndash; jeśli wierzysz w Jezusa Chrystusa, ale nie chcesz być liczony(-na) jako katolik / katoliczka</li>
+                    <li>teizm &ndash; jeśli wierzysz w osobowego Boga, który ma wpływ na Twoje życie</li>
+                    <li>deizm &ndash; jeśli wierzysz w bezosobowego boga, który nie wpływa na nasze życie</li>
                     <li>
                         zaznaczyć „nie należę do żadnego wyznania” - jeśli religia nie ma już dla Ciebie znaczenia,
-                        nie czujesz się częścią żadnej wspólnoty religijnej, nie wiesz czy bogowie istnieją lub nie wierzysz w ich istnienie.
+                        nie czujesz się częścią żadnej wspólnoty religijnej, nie wiesz, czy bogowie istnieją lub nie wierzysz w ich istnienie.
                     </li>
                 </ul>
             </details>
@@ -388,12 +388,12 @@
                     </summary>
                     <p>
                         Możesz wpisać „chrześcijaństwo”. Deklarujesz wtedy wiarę w Boga i Jezusa Chrystusa, ale nie
-                        jesteś liczony/a jako członek/ członkini Kościoła katolickiego.
+                        jesteś liczony(-na) jako członek / członkini Kościoła katolickiego.
                     </p>
                 </details>
                 <details class="faq-question">
                     <summary class="faq-question__summary">
-                        <h4>Czy w spisie jest pole dla ateistów/ ateistek i agnostyków/ agnostyczek?</h4>
+                        <h4>Czy w spisie jest pole dla ateistów / ateistek i agnostyków / agnostyczek?</h4>
                     </summary>
                     <p>
                         Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję „nie należę do żadnego wyznania”.
@@ -401,7 +401,7 @@
                 </details>
                 <details class="faq-question">
                     <summary class="faq-question__summary">
-                        <h4>Dlaczego nie mogę zaznaczyć po prostu inne?</h4>
+                        <h4>Dlaczego nie mogę zaznaczyć po prostu „inne”?</h4>
                     </summary>
                     <p>
                         Formularz spisowy zakłada, że po wybraniu odpowiedzi „inny (podać jaki)”
@@ -416,7 +416,7 @@
                     <p>
                         Istnieje taka możliwość, jeśli mieszkacie razem i Twoje wyznanie pozostanie niewypełnione.
                         W 2011 roku braki danych w tym pytaniu uzupełniano na podstawie odpowiedzi pozostałych
-                        domowników/domowniczek. Dlatego najlepiej osobiście to sprawdzić i wpisać odpowiedź
+                        domowników / domowniczek. Dlatego najlepiej osobiście to sprawdzić i wpisać odpowiedź
                         zgodną ze swoimi poglądami.
                     </p>
                 </details>
@@ -426,9 +426,9 @@
                     </summary>
                     <p>
                         Nie, odpowiedź na to pytanie nie zostanie przypisana do numeru PESEL. Spis jest anonimowy.
-                        Dane uczestników zostają w GUSie, który publikuje tylko statystyki odpowiedzi. Na przykład -
-                        procenty poszczególnych wyznań w całym kraju / województwie. Więcej o anonimowości spisu
-                        poczytaj na stronie <a href="https://spis.gov.pl/bezpieczenstwo-danych/" target="_blank">spis.gov.pl/bezpieczenstwo-danych/</a>.
+                        Dane uczestników zostają w GUS-ie, który publikuje tylko statystyki odpowiedzi.
+                        Np. procenty poszczególnych wyznań w całym kraju lub województwie. Więcej o anonimowości spisu
+                        przeczytasz na stronie <a href="https://spis.gov.pl/bezpieczenstwo-danych/" target="_blank">spis.gov.pl/bezpieczenstwo-danych/</a>.
                     </p>
                 </details>
 
@@ -437,12 +437,12 @@
                         <h4>Dlaczego tak mocno zwracacie uwagę na pytanie o wyznanie?</h4>
                     </summary>
                     <p>
-                        Bo tutaj dane oficjalne najbardziej odbiegają od rzeczywistości i tworzą fałszywy obraz
+                        Ponieważ to tutaj dane oficjalne najbardziej odbiegają od rzeczywistości i tworzą fałszywy obraz
                         jednolicie katolickiej Polski. Według obliczeń samego Kościoła katolickiego tylko około
                         27% Polaków i Polek uczestniczy w obrzędach religijnych. Jednocześnie, wobec ostatnich
                         wydarzeń i wychodzących na światło dzienne faktów, coraz więcej osób poddaje refleksji
                         swój stosunek do religii i Kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić,
-                        jak bardzo sformułowanie „olak-katoli” odbiega od prawdy.
+                        jak bardzo sformułowanie „Polak-katolik” odbiega od prawdy.
                     </p>
                 </details>
 
@@ -452,7 +452,7 @@
                     </summary>
                     <p>
                         Nie, istnieje też możliwość, że osoba dokonująca spisu zadzwoni do Ciebie lub osobiście
-                        odwiedzi Cię w domu/ mieszkaniu. Samospis internetowy jest jednak w tym roku po raz pierwszy
+                        odwiedzi Cię w domu / mieszkaniu. Samospis internetowy jest jednak w tym roku po raz pierwszy
                         podstawowym sposobem udziału w spisie i większość z nas powinna spisać się w ten sposób.
                     </p>
                 </details>
@@ -467,9 +467,9 @@
             <div class="row">
                 <div class="col-md-7">
                     <h2 class="target-indicator why-would-i__title">Po co w ogóle brać udział?</h2>
-                    <p class="why-would-i__text">Chcesz się liczyć? Policz się sam/a.</p>
+                    <p class="why-would-i__text">Chcesz się liczyć? Policz się sam(a).</p>
                     <p class="why-would-i__text">
-                        Rezygnując z udziału w spisie, znikasz, tracisz głos. Podobnie jak w przypadku, kiedy nie
+                        Rezygnując z udziału w spisie, znikasz, tracisz głos. Podobnie jak wtedy, gdy nie
                         idziesz głosować. Odrzucasz możliwość odpowiadania zgodnie z prawdą i własnym sumieniem.
                         W przypadku wyznania może Ci nawet zostać przypisana odpowiedź Twoich rodziców.
                     </p>
@@ -479,7 +479,7 @@
                         27% z nas regularnie uczestniczy we mszach.
                     </p>
                     <p class="why-would-i__text">
-                        Tylko osobisty udział w spisie zapewnia, że udzielisz takiej odpowiedzi, jakiej zechcesz.
+                        Tylko osobisty udział w spisie zapewnia, że udzielisz takiej odpowiedzi, z jaką się zgadzasz.
                     </p>
                 </div>
             </div>
