--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc_pl.png" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MR72C3N');</script>
+    <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
     <link href="assets/css/styles.css?0010" rel="stylesheet" />
@@ -61,16 +68,11 @@
                   <li><a href="#pytania-i-odpowiedzi">Pytania</a></li>
                   <li><a href="#po-co-mam-brac-udzial">Po co brać udział?</a></li>
                </ul>
-
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
+            </div>
+          </div>
         </nav>
-    </div><!--  end container-->
-
+    </div>
 </header>
-
-
-
 <main class="main">
     <div class="section social">
         <p class="container social__container">
@@ -561,5 +563,9 @@
         })
     })('open', doc.querySelector('[data-toggle=collapse]'))
 </script>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MR72C3N"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
