--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         Pytanie o wyznanie to pytanie o <strong>poczucie przynależności</strong>.
                     </li>
                     <li class="census-hints__item">
-                        Jeśli jesteś osobą bezwyznaniową agnostykiem / agnostyczką lub ateistą / ateistką,
+                        Jeśli jesteś osobą bezwyznaniową, agnostykiem / agnostyczką lub ateistą / ateistką,
                         <strong>wybierz opcję „nie należę do żadnego wyznania”</strong>.
 <!--                        <ol class="non-believers-hints">-->
 <!--                            <li class="non-believers-hint">-->
