--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
     <link rel="manifest" href="assets/site.webmanifest" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="col">
+    <meta name="theme-color" content="#000A8F" />
+    <meta name="color-scheme" content="only" />
     <title>Chcę się liczyć</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
