--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 </aside>
 <header>
     <div class="container">
-        <nav class="navbar navbar-ct navbar-white navbar-fixed-top navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-ct navbar-white navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                 <a class="navbar-toggle" data-toggle="collapse" href="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar bar1"></span>
+                    <span class="icon-bar bar2"></span>
+                    <span class="icon-bar bar3"></span>
                 </a>
                 <a href="/">
                     <div class="logo-container">
@@ -65,11 +65,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#o-co-chodzi">O co chodzi?</a></li>
-                  <li><a href="#jak-sie-spisac">Jak się spisać?</a></li>
-                  <li><a href="#wyznanie">Wyznanie</a></li>
-                  <li><a href="#pytania-i-odpowiedzi">Pytania</a></li>
-                  <li><a href="#po-co-mam-brac-udzial">Po co brać udział?</a></li>
+                  <li><a href="#o-co-chodzi" class="js-nav">O co chodzi?</a></li>
+                  <li><a href="#jak-sie-spisac" class="js-nav">Jak się spisać?</a></li>
+                  <li><a href="#wyznanie" class="js-nav">Wyznanie</a></li>
+                  <li><a href="#pytania-i-odpowiedzi" class="js-nav">Pytania</a></li>
+                  <li><a href="#po-co-mam-brac-udzial" class="js-nav">Po co brać udział?</a></li>
                </ul>
             </div>
           </div>
@@ -548,23 +548,45 @@
 </footer>
 
 <script>
-    const doc = document;
+    const doc = window.document;
     ((k,s,d,e,b,v = s.getItem(k)) => {
         v || (e.style.display = 'block');
         v || b.addEventListener('click', () => { e && d.body.removeChild(e); s.setItem(k, '1') });
         v && d.body.removeChild(e);
-    })('ciasteczka', localStorage, doc, doc.querySelector('.cookies-and-privacy'), doc.querySelector('.cookies-and-privacy__hide'));
-    ((c, t) => {
-        const m = doc.getElementById(t.href.split('#')[1]);
-        m.addEventListener('click', () => {
-            m.classList.remove(c);
+    })(
+        'ciasteczka',
+        localStorage,
+        doc,
+        doc.querySelector('.cookies-and-privacy'),
+        doc.querySelector('.cookies-and-privacy__hide'));
+    ((c, b, d, t, n, s) => {
+        const m = d.querySelector(t.getAttribute('href'));
+        const cl = m.classList;
+        const tcl = t.classList;
+        d.addEventListener('click', () => {
+            cl.remove(c);
+            tcl.remove(b);
+        });
+        n.forEach(nav => {
+            const a = d.querySelector(nav.getAttribute('href'));
+            nav.addEventListener('click', e => {
+                e.preventDefault();
+                a.scrollIntoView(s);
+            });
         });
         t.addEventListener('click', e => {
             e.preventDefault();
-            const cls = m.classList;
-            if (cls.contains(c)) cls.remove(c); else cls.add(c);
-        })
-    })('open', doc.querySelector('[data-toggle=collapse]'))
+            e.stopPropagation();
+            if (cl.contains(c)) cl.remove(c); else cl.add(c);
+            if (tcl.contains(b)) tcl.remove(b); else tcl.add(b);
+        });
+    })(
+        'open',
+        'toggled',
+        doc,
+        doc.querySelector('.navbar .navbar-toggle'),
+        doc.querySelectorAll('.navbar .js-nav'),
+        {behavior:'smooth'})
 </script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MR72C3N"
