--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
 <script>
     const doc = window.document;
     ((k,s,d,e,b,v = s.getItem(k)) => {
-        v || (e.style.display = 'block');
-        v || b.addEventListener('click', () => { e && d.body.removeChild(e); s.setItem(k, '1') });
-        v && d.body.removeChild(e);
+        v||(e.style.display='block');
+        v||b.addEventListener('click',() => {e&&d.body.removeChild(e);s.setItem(k,'1')});
+        v&&d.body.removeChild(e);
     })(
         'ciasteczka',
         localStorage,
@@ -560,23 +560,16 @@
         doc.querySelector('.cookies-and-privacy'),
         doc.querySelector('.cookies-and-privacy__hide'));
     ((c, b, d, t, n, s) => {
-        const m = d.querySelector(t.getAttribute('href'));
-        const cl = m.classList;
-        const tcl = t.classList;
-        d.addEventListener('click', () => {
-            cl.remove(c);
-            tcl.remove(b);
-        });
+        const m=d.querySelector(t.getAttribute('href'));
+        const cl=m.classList;
+        const tcl=t.classList;
+        d.addEventListener('click',() => {cl.remove(c);tcl.remove(b);});
         n.forEach(nav => {
-            const a = d.querySelector(nav.getAttribute('href'));
-            nav.addEventListener('click', e => {
-                e.preventDefault();
-                a.scrollIntoView(s);
-            });
+            const a=d.querySelector(nav.getAttribute('href'));
+            nav.addEventListener('click',e => {e.preventDefault();a.scrollIntoView(s);});
         });
         t.addEventListener('click', e => {
-            e.preventDefault();
-            e.stopPropagation();
+            e.preventDefault();e.stopPropagation();
             if (cl.contains(c)) cl.remove(c); else cl.add(c);
             if (tcl.contains(b)) tcl.remove(b); else tcl.add(b);
         });
@@ -587,6 +580,17 @@
         doc.querySelector('.navbar .navbar-toggle'),
         doc.querySelectorAll('.navbar .js-nav'),
         {behavior:'smooth'})
+    console.log(`
+
+
+ _____ _                       _            _     _                         _   _   _
+/  __ \\ |                     (_)          | |   (_)                       | | | | | |
+| /  \\/ |__   ___ ___      ___ _  ___      | |    _  ___ _____   _  ___    | | | | | |
+| |   | '_ \\ / __/ _ \\    / __| |/ _ \\     | |   | |/ __|_  / | | |/ __|   | | | | | |
+| \\__/\\ | | | (_|  __/    \\__ \\ |  __/     | |___| | (__ / /| |_| | (__    |_| |_| |_|
+ \\____/_| |_|\\___\\___|    |___/_|\\___|     \\_____/_|\\___/___|\\__, |\\___|   (_) (_) (_)
+                                                              __/ |
+                                                             |___/`)
 </script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MR72C3N"
