--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
 <main class="main">
     <div class="section social">
         <p class="container social__container">
-            <strong class="social__callout">Podziel się:</strong>
+            <strong class="social__callout">Polub:</strong>
             <a
                     title="Podziel się na Facebooku"
                     class="social__button social__button--facebook"
-                    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fchcesieliczyc.pl"
+                    href="https://facebook.com/chcesieliczyc"
                     target="_blank">
                 <img src="assets/icon/facebook-icon.svg" alt="Facebook">
             </a>
             <a
                     class="social__button social__button--twitter"
                     title="Zatłituj o nas"
-                    href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23ChceSieLiczyc%20%40chcesieliczyc"
+                    href="https://twitter.com/chcesieliczyc"
                     target="_blank">
                 <img src="assets/icon/twitter-icon.svg" alt="Twitter">
             </a>
@@ -189,6 +189,31 @@
             </div>
         </div>
         </div>
+
+        <aside class="social-share social-share--main">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-4 col-lg-offset-5 social-share__wrapper">
+                        <h2 class="social-share__title">Podziel się:</h2>
+                        <a
+                                title="Podziel się na Facebooku"
+                                class="btn social-share__button social-share__button--facebook"
+                                href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fchcesieliczyc.pl"
+                                target="_blank">
+                            Share <img src="assets/icon/facebook-invert-icon.svg" alt="on Facebook" />
+                        </a>
+                        <a
+                                title="Zatłituj o nas"
+                                class="btn social-share__button social-share__button--twitter"
+                                href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23ChceSieLiczyc%20%40chcesieliczyc"
+                                target="_blank">
+                            Tweet <img src="assets/icon/twitter-invert-icon.svg" alt="on Twitter" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </aside>
+
     </section>
 
     <a id="o-co-chodzi"></a>
@@ -490,14 +515,14 @@
             </div>
         </div>
     </section>
-    <aside class="social-bottom">
+    <aside class="social-share">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-1 social-bottom__wrapper">
-                    <h2 class="social-bottom__title">Udostępnij:</h2>
+                <div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-1 social-share__wrapper">
+                    <h2 class="social-share__title">Udostępnij:</h2>
                     <a
                             title="Podziel się na Facebooku"
-                            class="btn social-bottom__button social-bottom__button--facebook"
+                            class="btn social-share__button social-share__button--facebook"
                             href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fchcesieliczyc.pl"
                             target="_blank">
                         <img src="assets/icon/facebook-invert-icon.svg" alt="[FB]" />
@@ -505,7 +530,7 @@
                     </a>
                     <a
                             title="Zatłituj o nas"
-                            class="btn social-bottom__button social-bottom__button--twitter"
+                            class="btn social-share__button social-share__button--twitter"
                             href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23ChceSieLiczyc%20%40chcesieliczyc"
                             target="_blank">
                         <img src="assets/icon/twitter-invert-icon.svg" alt="[TW]" />
