--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <p class="how-to-religion__text">Jeśli wybierzesz odpowiedź 1, pojawi się lista związków wyznaniowych.</p>
                 <p class="how-to-religion__text"><strong>I tutaj sprawa się komplikuje. </strong></p>
                 <p class="how-to-religion__text">
-                    Na początku na liście pojawi się 7 największych kościołów w Polsce.
+                    Na początku na liście pojawi się 7 największych Kościołów w Polsce.
                     Jeśli nie znajdujesz na liście wyznania, które chcesz zadeklarować,
                     <strong>możesz je wpisać własnymi słowami</strong>.
                     Żeby to zrobić:
