--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="pl">
-<!--<html lang="pl" class="debug">-->
+<!--<html lang="pl">-->
+<html lang="pl" class="debug">
 <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/icon/favicon.ico">
@@ -518,7 +518,7 @@
     <aside class="social-share">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-1 social-share__wrapper">
+                <div class="col-xl-6 col-lg-7 col-md-8 col-sm-11 col-xs-12 col-md-offset-1 social-share__wrapper">
                     <h2 class="social-share__title">Udostępnij:</h2>
                     <a
                             title="Podziel się na Facebooku"
