--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/styles.css?0010" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
     <!--     Google Fonts     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
@@ -136,7 +136,9 @@
                 </p>
 
                 <footer class="intro-footer">
-                    <a class="btn btn-fill btn--cta intro-footer__cta" href="#jak-sie-spisac">Liczę się</a>
+                    <a class="btn btn-fill btn--cta intro-footer__cta js-cta" href="#jak-sie-spisac">
+                        Liczę się
+                    </a>
                 </footer>
             </div>
         </div>
@@ -556,7 +558,8 @@
     <div class="container footer__content">
         <p class="footer__copyrights">
             <img src="assets/img/logo-invert.svg" alt="Chcę się Liczyć" />
-            &copy; 2021 Inicjatywa „Chcę się liczyć”
+            <span class="footer-detail">&copy; 2021 Inicjatywa</span>
+            <span class="footer-detail">„Chcę się liczyć”</span>
         </p>
         <p class="footer__contact">
             <a href="mailto:kontakt@chcesieliczyc.pl" class="footer-link footer-link--email">kontakt@chcesieliczyc.pl</a>
@@ -572,51 +575,7 @@
     </div>
 </footer>
 
-<script>
-    const doc = window.document;
-    ((k,s,d,e,b,v = s.getItem(k)) => {
-        v||(e.style.display='block');
-        v||b.addEventListener('click',() => {e&&d.body.removeChild(e);s.setItem(k,'1')});
-        v&&d.body.removeChild(e);
-    })(
-        'ciasteczka',
-        localStorage,
-        doc,
-        doc.querySelector('.cookies-and-privacy'),
-        doc.querySelector('.cookies-and-privacy__hide'));
-    ((c, b, d, t, n, s) => {
-        const m=d.querySelector(t.getAttribute('href'));
-        const cl=m.classList;
-        const tcl=t.classList;
-        d.addEventListener('click',() => {cl.remove(c);tcl.remove(b);});
-        n.forEach(nav => {
-            const a=d.querySelector(nav.getAttribute('href'));
-            nav.addEventListener('click',e => {e.preventDefault();a.scrollIntoView(s);});
-        });
-        t.addEventListener('click', e => {
-            e.preventDefault();e.stopPropagation();
-            if (cl.contains(c)) cl.remove(c); else cl.add(c);
-            if (tcl.contains(b)) tcl.remove(b); else tcl.add(b);
-        });
-    })(
-        'open',
-        'toggled',
-        doc,
-        doc.querySelector('.navbar .navbar-toggle'),
-        doc.querySelectorAll('.navbar .js-nav'),
-        {behavior:'smooth'})
-    console.log(`
-
-
- _____ _                       _            _     _                         _   _   _
-/  __ \\ |                     (_)          | |   (_)                       | | | | | |
-| /  \\/ |__   ___ ___      ___ _  ___      | |    _  ___ _____   _  ___    | | | | | |
-| |   | '_ \\ / __/ _ \\    / __| |/ _ \\     | |   | |/ __|_  / | | |/ __|   | | | | | |
-| \\__/\\ | | | (_|  __/    \\__ \\ |  __/     | |___| | (__ / /| |_| | (__    |_| |_| |_|
- \\____/_| |_|\\___\\___|    |___/_|\\___|     \\_____/_|\\___/___|\\__, |\\___|   (_) (_) (_)
-                                                              __/ |
-                                                             |___/`)
-</script>
+<script src="assets/js/main.js" async></script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MR72C3N"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
