--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="pl">
-<!--<html lang="pl" class="debug">-->
 <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/icon/favicon.ico">
@@ -155,16 +154,17 @@
                         utrwalą obraz tego, jak wygląda nasz kraj i wpłyną na kształt relacji państwo &ndash; Kościół.
                     </p>
                     <p>
-                        Bez Ciebie obraz będzie niepełny.
+                        <strong>Nie odmawiaj odpowiedzi.</strong>
+                        Bez Ciebie ten obraz będzie niepełny.
                     </p>
                 </article>
             </div>
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
                 <article class="info-box__container">
                     <img src="assets/icon/house-icon.svg" class="info-box__icon" alt="Gdzie?"/>
-                    <h5 class="info-box__title">Spisujemy się mieszkaniami</h5>
+                    <h5 class="info-box__title">Spisujemy się tam, gdzie mieszkamy</h5>
                     <p>Każde mieszkanie wypełnia <strong>jeden formularz online</strong>.</p>
-                    <p>Upewnij się, że przy tym będziesz.</p>
+                    <p>Upewnij się, że przy tym <strong>będziesz lub sprawdź później swoje dane.</strong></p>
                     <p><strong>Nie odmawiaj odpowiedzi. Spis jest anonimowy.</strong></p>
                 </article>
             </div>
@@ -256,13 +256,17 @@
                     Jedno mieszkanie = jeden formularz
                 </p>
                 <p class="how-to-prepare__text">
-                    <strong>Na jedno mieszkanie / dom jednorodzinny przypada jeden formularz spisowy.</strong>
+                    <strong>
+                        Spisujemy się w miejscu faktycznego zamieszkania (to nie musi być miejsce zameldowania).
+                        Na jedno mieszkanie / dom jednorodzinny przypada jeden formularz spisowy.
+                    </strong>
                     Pierwsza część to spis zamieszkujących, druga dotyczy warunków mieszkaniowych.
                     W ostatniej są formularze dla poszczególnych osób. Tam znajduje się m.in. pytanie o wyznanie.
                 </p>
                 <p class="how-to-prepare__text">
                     <strong>
                         Najlepiej, żeby każdy wypełnił tę część osobiście, więc upewnij się, że przy tym będziesz.
+                        Jeśli spiszę Cię ktoś inny, możesz później zalogować się własnym numerem PESEL i poprawić dane.
                     </strong>
                 </p>
             </article>
@@ -330,16 +334,17 @@
                 </p>
                 <ol class="how-to-religion__options">
                     <li class="how-to-religion__option">
-                        wybierz odpowiedź „inne wyznanie (podać jakie)”.
+                        Wybierz odpowiedź „inne (podać jakie)”.
                     </li>
                     <li class="how-to-religion__option">
-                        rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe Kościoły i ponownie odpowiedź
-                        „inny (podać jaki)”.
+                        Pojawi się pole wyszukiwania. Kiedy zaczniesz coś wpisywać, rozwinie się lista, na której
+                        znajdziesz pozostałe związki wyznaniowe zarejestrowane w Polsce oraz odpowiedź
+                        „inny (wpisać poniżej)”.
                     </li>
                     <li class="how-to-religion__option">
                         <strong>
-                            dopiero po wybraniu tej opcji po raz drugi będziesz w stanie wpisać wyznanie,
-                            którego nie ma na liście.
+                            Dopiero po wyszukaniu i wybraniu tej opcji, w kolejne pole poniżej będziesz
+                            w stanie wpisać wyznanie, którego nie ma na liście.
                         </strong>
                     </li>
                 </ol>
@@ -488,6 +493,65 @@
                         podstawowym sposobem udziału w spisie i większość z nas powinna spisać się w ten sposób.
                     </p>
                 </details>
+
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
+                        <h4>A co, jeśli wynajmuję mieszkanie?</h4>
+                    </summary>
+                    <p>
+                        Jeśli wynajmujesz mieszkanie, spisujesz się w tym wynajmowanym mieszkaniu. Spisujemy się w
+                        miejscu faktycznego zamieszkania.
+                    </p>
+                </details>
+
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
+                        <h4>Czy spisujemy się w miejscu zameldowania?</h4>
+                    </summary>
+                    <p>
+                        Spisujemy się w miejscu faktycznego zamieszkania, więc jeśli nie mieszkasz pod adresem
+                        zameldowania, wpisz adres, pod którym faktycznie mieszkasz.
+                    </p>
+                </details>
+
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
+                        <h4>Czy można poprawiać dane?</h4>
+                    </summary>
+                    <p>
+                        Dane można poprawić w ciągu 14 dni od pierwszego zalogowania własnym numerem PESEL / profilem
+                        zaufanym do formularza spisowego. Jeśli spisał Cię ktoś inny (osoba logująca się innymi danymi
+                        niż Twoje), do końca spisu możesz zalogować się samodzielnie swoimi danymi i wypełnić
+                        formularze zgodnie z własnymi przekonaniami. Pamiętaj, że po upłynięciu 14 dni od Twojego
+                        pierwszego zalogowania własnymi danymi (lub w dniu zakończenia spisu) możliwość edycji
+                        danych zostanie zablokowana.
+                    </p>
+                </details>
+
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
+                        <h4>Czy mogę się spisać, jeśli mieszkam za granicą?</h4>
+                    </summary>
+                    <p>Tak, jeśli mieszkasz za granicą, możesz zostać spisany(-a) na dwa sposoby: </p>
+                    <ol>
+                        <li>
+                            logując się samodzielnie i podając adres ostatniego miejsca zamieszkania w Polsce
+                        </li>
+                        <li>
+                            jeśli jesteś nadal zameldowany(-a) w Polsce - prosząc osoby zamieszkałe w Twoimi miejscu
+                            zameldowania o dopisanie Cię jako osoby zameldowanej w tym mieszkaniu. Wtedy to osoby
+                            spisujące wypełnią Twój kwestionariusz osobowy zawierający m.in. pytanie o wyznanie.
+                        </li>
+                    </ol>
+                    <p>Rekomendujemy wybranie pierwszej z tych możliwości.</p>
+                </details>
+
+<!--                <details class="faq-question">-->
+<!--                    <summary class="faq-question__summary">-->
+<!--                        <h4>????</h4>-->
+<!--                    </summary>-->
+<!--                    <p> …… </p>-->
+<!--                </details>-->
             </div>
         </div>
         </div>
