--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <h5 class="info-box__title">Spisujemy się tam, gdzie mieszkamy</h5>
                     <p>Każde mieszkanie wypełnia <strong>jeden formularz online</strong>.</p>
                     <p>Upewnij się, że przy tym <strong>będziesz lub sprawdź później swoje dane.</strong></p>
-                    <p><strong>Nie odmawiaj odpowiedzi. Spis jest anonimowy.</strong></p>
+                    <p><strong>Wyniki spisu są anonimowe.</strong></p>
                 </article>
             </div>
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
