--- a/index.html
+++ b/index.html
@@ -279,12 +279,11 @@
                     <a href="https://spis.gov.pl/"
                        title="Narodowy Spis Powszechny Ludności i Mieszkań 2021 - Strona Informacyjna"
                        target="_blank">spis.gov.pl</a>.
-                    Do formularza spisowego można zalogować się na trzy sposoby:
+                    Do formularza spisowego można zalogować się na dwa sposoby:
                 </p>
                 <ul class="how-to-login__options">
                     <li class="how-to-login__option">profilem zaufanym</li>
                     <li class="how-to-login__option">za pomocą numeru PESEL i nazwiska panieńskiego matki</li>
-                    <li class="how-to-login__option">kodem mieszkania otrzymanym w liście Prezesa GUS</li>
                 </ul>
                 <p class="how-to-login__text">
                     Dokładne informacje dotyczące logowania są również dostępne na stronie spisu.
