--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="col-md-6">
                 <p class="intro-text">
                     <strong class="intro-text__important intro-text__important--first">
-                        Już za chwilę kolejny Spis Powszechny.
+                        Trwa Narodowy Spis Powszechny 2021.
                     </strong>
                     <br class="hidden"/>
                     <strong class="intro-text__important intro-text__important--second">
@@ -347,6 +347,11 @@
                         </strong>
                     </li>
                 </ol>
+                <p class="how-to-religion__text">
+                    <a href="https://www.youtube.com/watch?v=MQDse11kSzs" target="_blank" title="zobacz film">
+                        Zobacz film, który pokazuje, jak dokładnie przebiega wypełnianie części dotyczącej wyznania.
+                    </a>
+                </p>
                 <p class="how-to-religion__text">Nie wiesz, co wpisać? Patrz niżej.</p>
             </article>
         </div>
