--- a/polityka-prywatnosci/index.html
+++ b/polityka-prywatnosci/index.html
@@ -62,7 +62,7 @@ Niniejsza Polityka stanowi podstawową informację o celach, sposobach przetwarz
 
 §1. Informacje podstawowe.
 
-1. Administratorem Twoich danych osobowych jest właściciel Strony.
+1. Administratorem Twoich danych osobowych jest Oskar Żyndul.
 1) Kontakt z Administratorem jest możliwy za pośrednictwem poczty e-mail: kontakchsl@protonmail.com
 
 §2. Zasady przetwarzania danych.
