--- a/index.html
+++ b/index.html
@@ -523,11 +523,14 @@
                         <h4>Czy można poprawiać dane?</h4>
                     </summary>
                     <p>
-                        Dane można poprawić w ciągu 14 dni od pierwszego zalogowania własnym numerem PESEL / profilem
-                        zaufanym do formularza spisowego. Jeśli spisał Cię ktoś inny (osoba logująca się innymi danymi
-                        niż Twoje), do końca spisu możesz zalogować się samodzielnie swoimi danymi i wypełnić
-                        formularze zgodnie z własnymi przekonaniami. Pamiętaj, że po upłynięciu 14 dni od Twojego
-                        pierwszego zalogowania własnymi danymi (lub w dniu zakończenia spisu) możliwość edycji
+                        Jeśli spisał Cię ktoś inny (osoba logująca się innymi danymi niż Twoje), do końca spisu
+                        możesz zalogować się samodzielnie swoimi danymi i wypełnić formularze zgodnie z własnymi
+                        przekonaniami.
+<!--                        Dane można poprawić w ciągu 14 dni od pierwszego zalogowania własnym numerem PESEL / profilem-->
+<!--                        zaufanym do formularza spisowego. Jeśli spisał Cię ktoś inny (osoba logująca się innymi danymi-->
+<!--                        niż Twoje), do końca spisu możesz zalogować się samodzielnie swoimi danymi i wypełnić-->
+<!--                        formularze zgodnie z własnymi przekonaniami. Pamiętaj, że po upłynięciu 14 dni od Twojego-->
+<!--                        pierwszego zalogowania własnymi danymi (lub w dniu zakończenia spisu) możliwość edycji-->
                         danych zostanie zablokowana.
                     </p>
                 </details>
