--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 <!--                        niż Twoje), do końca spisu możesz zalogować się samodzielnie swoimi danymi i wypełnić-->
 <!--                        formularze zgodnie z własnymi przekonaniami. Pamiętaj, że po upłynięciu 14 dni od Twojego-->
 <!--                        pierwszego zalogowania własnymi danymi (lub w dniu zakończenia spisu) możliwość edycji-->
-                        danych zostanie zablokowana.
+<!--                        danych zostanie zablokowana.-->
                     </p>
                 </details>
 
